REGRESSION(r103245): can't scroll left/up using scrollbar controls of overflowing elements https://bugs.webkit.org/show_bug.cgi?id=76317

Reviewed by Darin Adler.

Source/WebCore:

Test: scrollbars/scroll-rtl-or-bt-layer.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::updateScrollInfoAfterLayout): Call scrollToOffsetWithoutAnimation since we're always
scrolling to the just computed offset.

LayoutTests:

* platform/win/Skipped:
* scrollbars/scroll-rtl-or-bt-layer-expected.txt: Added.
* scrollbars/scroll-rtl-or-bt-layer.html: Added.


Canonical link: https://commits.webkit.org/93829@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105820 268f45cc-cd09-0410-ab3c-d52691b4dbfc